[3841] Improvement update Swagger
