# storage/api-docs/api-docs.json
@@ -167,8 +167,8 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "Log in a user",
-                "description": "Log in by providing email and password, returns access and refresh tokens.",
+                "summary": "Logs in a user",
+                "description": "Logs in by providing an email and password. Limits login attempts to 5 per minute per email.",
                 "operationId": "loginUser",
                 "requestBody": {
                     "description": "User login credentials",
@@ -189,7 +189,7 @@
                                     "password": {
                                         "type": "string",
                                         "format": "password",
-                                        "example": "yourpassword"
+                                        "example": "pass1234"
                                     }
                                 },
                                 "type": "object"
@@ -242,8 +242,28 @@
                             }
                         }
                     },
+                    "429": {
+                        "description": "Too many login attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Vui lòng đăng nhập sau {seconds} giây"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
                     "500": {
-                        "description": "Internal server error",
+                        "description": "Internal Server Error",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -266,12 +286,12 @@
                 "tags": [
                     "Authentication"
                 ],
-                "summary": "User profile",
-                "description": "Returns the profile of the authenticated user.",
-                "operationId": "94a5f4c5f5e5755cf43698cf9bc49e9d",
+                "summary": "Get user profile",
+                "description": "Retrieves the profile of the authenticated user. Requires a valid JWT token.",
+                "operationId": "getUserProfile",
                 "responses": {
                     "200": {
-                        "description": "Profile data retrieved successfully",
+                        "description": "Successful operation",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -282,14 +302,30 @@
                                         },
                                         "message": {
                                             "type": "string",
-                                            "example": "Profile data"
+                                            "example": "Dữ liệu thông tin người dùng"
                                         },
                                         "data": {
-                                            "type": "object",
-                                            "example": {
-                                                "username": "nguyenvanha",
-                                                "email": "nguyenvanha@gmail.com"
-                                            }
+                                            "$ref": "#/components/schemas/User"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Token hết hạn không thể lấy thông tin người dùng"
                                         }
                                     },
                                     "type": "object"
@@ -326,7 +362,7 @@
                                         },
                                         "message": {
                                             "type": "string",
-                                            "example": "User logged out successfully"
+                                            "example": "Đăng xuất thành công"
                                         }
                                     },
                                     "type": "object"
@@ -379,7 +415,7 @@
                                     "properties": {
                                         "error": {
                                             "type": "string",
-                                            "example": "No refresh token provided"
+                                            "example": "Refresh token không tồn tại hoặc đã hết hạn"
                                         }
                                     },
                                     "type": "object"
@@ -446,7 +482,7 @@
                                         },
                                         "message": {
                                             "type": "string",
-                                            "example": "Đã gửi email thay đổi mật khẩu"
+                                            "example": "Đã gửi email thay đổi mật khẩu, vui lòng kiểm tra email của bạn"
                                         }
                                     },
                                     "type": "object"
@@ -587,6 +623,15 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "description": "Enter JWT Bearer token **_only_**",
+                "in": "header",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     }
